--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.19.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -29,6 +30,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -36,7 +38,9 @@
     "eslint-formatter-mo": "^1.2.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
+    "morgan": "^1.10.0",
     "prettier": "^3.0.0",
+    "prisma": "5.19.1",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
